@@ -25,7 +25,7 @@ class C_Blog extends B_Controller
     {
         $this->view()->setLayout('dashboard');
         $user_id = $this->session()->user_profile_id;
-        $this->view()->blogs = UserBlog::findByUser($user_id);
+        $this->view()->blogs_ = UserBlog::findByUser($user_id);
     }
 
     /**
