@@ -1,11 +1,9 @@
 $(document).ready(function()
 {
-    <?php if($this->registry()->request()->object->getController() != "dashboard"): ?>
-
-    /* maximize middle content */
+    /* maximize main container */
 
     var top_bar = $("#topbar");
-    var middle_content = $("#middlecontent");
+    var main_container = $("#maincontainer");
 
     function window_update()
     {
@@ -14,10 +12,10 @@ $(document).ready(function()
 
         _t_h = top_bar.outerHeight();
 
-        middle_content.css('top', _t_h);
-        middle_content.css('left');
-        middle_content.width(ww);
-        middle_content.height(wh - _t_h);
+        main_container.css('top', _t_h);
+        main_container.css('left');
+        main_container.width(ww);
+        main_container.height(wh - _t_h);
     }
 
     window_update();
@@ -26,6 +24,4 @@ $(document).ready(function()
     {
         window_update();
     });
-
-    <?php endif ?>
 });
