@@ -1,4 +1,4 @@
-<div class="subpage">
+<div class="subcontainer">
 
 <form>
     <h1><?php echo $this->translation()->blog_add ?></h1>
