@@ -1,13 +1,28 @@
 <?php if(count($this->blogs) > 0) : ?>
 
-<div id="middlecontent"></div>
+<div id="feedarea">
+<div id="feedareahead" class="containerhead">
+    <span class="title"><?php echo $this->translation()->feeds ?></span>
+    <span class="feeddisplay">
+    <b><?php echo $this->translation()->feeds_display ?>: </b>
+    <span class="feedsdspall" style="display:none">
+        <?php echo $this->translation()->feeds_display_all ?> | 
+        <a id="feeddsplnkthr"><?php echo $this->translation()->feeds_display_threaded ?></a>
+    </span>
+    <span class="feedsdspthr" style="display:none">
+        <a id="feeddsplnkall"><?php echo $this->translation()->feeds_display_all ?></a> | 
+        <?php echo $this->translation()->feeds_display_threaded ?>
+    </span>
+    </span>
+</div>
+<div id="feedlistarea"></div>
+</div>
 
 <div id="bottombar">
 <div id="bottomleftbar"><nobr>
 
 <table><tr>
-<td><span class="title"><?php echo $this->translation()->queue ?>:</span></td>
-<td><span class="mode"><?php echo $this->translation()->mode ?>:&nbsp;
+<td><span><b><?php echo $this->translation()->mode ?>: </b>
 <select name="queuemode">
     <option value="M"><?php echo $this->translation()->queue_mode_manual ?></option>
     <option value="A"><?php echo $this->translation()->queue_mode_automatic ?></option>
