@@ -31,3 +31,12 @@ HORAS TRABALHADAS: 6h
 - Inclusao de listagem de feeds no dashboard
 
 HORAS TRABALHADAS: 6h
+
+==========
+08/05/2009
+==========
+
+- Inclusao de listagem de feeds no dashboard, modos all e threaded
+- Inclusao de listagem de articles no modo all
+
+HORAS TRABALHADAS: 4h
